# neofoodclub.rs

./: .gitignore  .justfile  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  benchmark.yml  codspeed.yml  coverage.yml  depenabot-automerge.yml  dependabot-automerge.yml  test.yml
benches/: math_benches.rs
examples/: all_bets_table.rs
src/: arena.rs  bets.rs  chance.rs  food_adjustments.rs  lib.rs  main.rs  math.rs  modifier.rs  nfc.rs  odds.rs  oddschange.rs  pirates.rs  round_data.rs  utils.rs
src/models/: multinomial_logit.rs  original.rs
tests/: integration_test.rs  validation.rs
