[package]
name = "neofoodclub"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
bitflags = "2.9.0"
serde_qs = "0.14.0"
regex = "1.11.1"
querystring = "1.1.0"
chrono = "0.4.41"
chrono-tz = "0.10.3"
comfy-table = "7.1.4"

[lib]
name = "neofoodclub"

[[example]]
name = "all_bets_table"
path = "examples/all_bets_table.rs"
