[package]
name = "neofoodclub"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
rand = "0.9.2"
bitflags = "2.9.4"
serde_qs = "0.15.0"
regex = "1.12.1"
querystring = "1.1.0"
chrono = "0.4.41"
chrono-tz = "0.10.4"
comfy-table = "7.2.0"

[lib]
name = "neofoodclub"

[[example]]
name = "all_bets_table"
path = "examples/all_bets_table.rs"
